--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1411,7 +1411,7 @@ img.left {
 }
 
 .section-padding {
-  padding: 120px 0;
+  padding: 70px 0;
 }
 
 .section-ptb {
@@ -6514,7 +6514,7 @@ footer .bg-pattern {
 
 .workinter .lg-sec-head h2 {
   background: -webkit-linear-gradient(90deg, transparent, #fff);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
 }
 
@@ -8439,7 +8439,7 @@ header.in-box {
   height: 400px;
   width: 60%;
   margin-left: 40%;
-  margin-top: -160px;
+  margin-top: -400px;
 }
 
 .crev-header .main-img img {
@@ -9157,723 +9157,6 @@ header.in-box {
   text-align: center;
   border: 1px solid #fff;
   border-radius: 50%;
-}
-
-/* Shop
------------------------------------------------------------------*/
-.main-shop .sidebar .title {
-  margin-bottom: 30px;
-  padding-bottom: 10px;
-  position: relative;
-}
-
-.main-shop .sidebar .title:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  border-top: 1px solid rgba(255, 255, 255, 0.04);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.04);
-}
-
-.main-shop .sidebar .search .form-group {
-  position: relative;
-}
-
-.main-shop .sidebar .search .form-group input {
-  width: 100%;
-  padding-bottom: 15px;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  color: #fff;
-}
-
-.main-shop .sidebar .search .form-group button {
-  width: 0;
-  height: 0;
-  background: transparent;
-  border: 0;
-  position: absolute;
-  top: 0;
-  right: 20px;
-  padding: 0;
-  font-size: 20px;
-  line-height: 1;
-  color: #fff;
-}
-
-.main-shop .sidebar .categories li {
-  display: block;
-  margin-bottom: 10px;
-}
-
-.main-shop .sidebar .categories li:hover {
-  color: #ffaa17;
-}
-
-.main-shop .sidebar .categories li:last-of-type {
-  margin-bottom: 0;
-}
-
-.main-shop .sidebar .price-range .price-input .field {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  max-width: 60px;
-}
-
-.main-shop .sidebar .price-range .field input {
-  border: 0;
-  background: transparent;
-  color: #fff;
-  pointer-events: none;
-}
-
-.main-shop .sidebar .price-range input[type="number"]::-webkit-outer-spin-button,
-.main-shop .sidebar .price-range input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-.main-shop .sidebar .price-range .slider-range {
-  height: 2px;
-  position: relative;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.main-shop .sidebar .price-range .slider-range .progress {
-  height: 8px;
-  top: -3px;
-  left: 0;
-  right: 25%;
-  position: absolute;
-  border-radius: 0;
-  background: #ffaa17;
-}
-
-.main-shop .sidebar .price-range .range-input {
-  position: relative;
-}
-
-.main-shop .sidebar .price-range .range-input input {
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  top: -5px;
-  background: none;
-  pointer-events: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-.main-shop .sidebar .price-range input[type="range"]::-webkit-slider-thumb {
-  height: 17px;
-  width: 5px;
-  border: none;
-  background: #ffaa17;
-  pointer-events: auto;
-  -webkit-appearance: none;
-}
-
-.main-shop .sidebar .price-range input[type="range"]::-moz-range-thumb {
-  height: 17px;
-  width: 5px;
-  border: none;
-  background: #ffaa17;
-  pointer-events: auto;
-  -moz-appearance: none;
-}
-
-.main-shop .sidebar .best-sale .line-list {
-  margin-bottom: 30px;
-  position: relative;
-}
-
-.main-shop .sidebar .best-sale .line-list .over-link {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.main-shop .sidebar .best-sale .line-list:last-of-type {
-  margin-bottom: 0;
-}
-
-.main-shop .sidebar .best-sale .line-list .img {
-  width: 80px;
-  height: 80px;
-}
-
-.main-shop .sidebar .best-sale .line-list .img img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center center;
-  object-position: center center;
-}
-
-.main-shop .sidebar .best-sale .line-list .cont {
-  padding-left: 15px;
-}
-
-.main-shop .sidebar .best-sale .line-list .cont .rate {
-  font-size: 12px;
-  color: #aaa;
-  margin-bottom: 10px;
-}
-
-.main-shop .sidebar .best-sale .line-list .cont h6,
-.main-shop .sidebar .best-sale .line-list .cont h5 {
-  line-height: 1.2;
-}
-
-.main-shop .sidebar .best-sale .line-list .cont h6 {
-  font-size: 16px;
-}
-
-.main-shop .sidebar .best-sale .line-list .cont h5 {
-  font-size: 17px;
-  color: #ffaa17;
-}
-
-.main-shop .sidebar .tags .tags-links a {
-  font-size: 13px;
-  padding: 5px 12px;
-  background: rgba(255, 255, 255, 0.04);
-  border: 1px solid rgba(255, 255, 255, 0.04);
-  margin: 3px 3px 3px 0;
-  -webkit-transition: all .4s;
-  -o-transition: all .4s;
-  transition: all .4s;
-}
-
-.main-shop .sidebar .tags .tags-links a:hover {
-  background: transparent;
-  color: #ffaa17;
-}
-
-.main-shop .shop-products .top-side .select-hidden {
-  display: none;
-  visibility: hidden;
-  padding-right: 10px;
-}
-
-.main-shop .shop-products .top-side .select {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  font-size: 14px;
-  color: #fff;
-  min-width: 260px;
-  height: 40px;
-}
-
-.main-shop .shop-products .top-side .select-styled {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: transparent;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-  padding: 8px 0;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.main-shop .shop-products .top-side .select-styled:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border: 7px solid transparent;
-  border-color: #fff transparent transparent transparent;
-  position: absolute;
-  top: 16px;
-  right: 0;
-}
-
-.main-shop .shop-products .top-side .select-styled:active,
-.main-shop .shop-products .top-side .select-styled.active {
-  border-color: #fff;
-}
-
-.main-shop .shop-products .top-side .select-styled:active:after,
-.main-shop .shop-products .top-side .select-styled.active:after {
-  top: 9px;
-  border-color: transparent transparent #fff transparent;
-}
-
-.main-shop .shop-products .top-side .select-options {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  left: 0;
-  z-index: 999;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: #1d1d1d;
-  border: 1px solid rgba(255, 255, 255, 0.4);
-}
-
-.main-shop .shop-products .top-side .select-options li {
-  margin: 0;
-  padding: 12px 0;
-  text-indent: 15px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  -moz-transition: all 0.15s ease-in;
-  -o-transition: all 0.15s ease-in;
-  -webkit-transition: all 0.15s ease-in;
-  transition: all 0.15s ease-in;
-}
-
-.main-shop .shop-products .top-side .select-options li:hover,
-.main-shop .shop-products .top-side .select-options li.is-selected {
-  color: #1d1d1d;
-  background: #fff;
-}
-
-.main-shop .shop-products .top-side .select-options li[rel="hide"] {
-  display: none;
-}
-
-.main-shop .shop-products .item .img {
-  position: relative;
-}
-
-.main-shop .shop-products .item .img:hover .add-cart,
-.main-shop .shop-products .item .img:hover .fav {
-  opacity: 1;
-  visibility: visible;
-}
-
-.main-shop .shop-products .item .img:hover:after {
-  opacity: .3;
-}
-
-.main-shop .shop-products .item .img:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #1d1d1d;
-  opacity: 0;
-  -webkit-transition: all .4s;
-  -o-transition: all .4s;
-  transition: all .4s;
-}
-
-.main-shop .shop-products .item .img .add-cart {
-  position: absolute;
-  bottom: 40px;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  padding: 14px 35px;
-  background: #1d1d1d;
-  border-radius: 40px;
-  font-size: 13px;
-  text-transform: uppercase;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all .4s;
-  -o-transition: all .4s;
-  transition: all .4s;
-  z-index: 3;
-}
-
-.main-shop .shop-products .item .img .fav {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 20px;
-  cursor: pointer;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all .4s;
-  -o-transition: all .4s;
-  transition: all .4s;
-  z-index: 3;
-}
-
-.main-shop .shop-products .item .cont {
-  margin-top: 30px;
-}
-
-.main-shop .shop-products .item .cont .rate {
-  font-size: 12px;
-  color: #aaa;
-  margin-bottom: 10px;
-}
-
-.main-shop .shop-products .item .cont h6,
-.main-shop .shop-products .item .cont h5 {
-  line-height: 1.2;
-}
-
-.main-shop .shop-products .item .cont h5 {
-  font-size: 20px;
-  color: #ffaa17;
-}
-
-.main-shop .shop-products .pagination li {
-  display: inline-block;
-}
-
-.main-shop .shop-products .pagination li a {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  margin: 0 5px;
-  text-align: center;
-}
-
-.main-shop .shop-products .pagination li.active a {
-  background: rgba(255, 255, 255, 0.04);
-}
-
-.product-details .img-preview .gallery-thumb .swiper-slide {
-  opacity: .7;
-}
-
-.product-details .img-preview .gallery-thumb .swiper-slide-thumb-active {
-  opacity: 1;
-}
-
-.product-details .prod-order .counter {
-  padding: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.product-details .prod-order .counter input {
-  width: 50px;
-  border: 0;
-  font-size: 15px;
-  line-height: 30px;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.04);
-  color: #fff;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: 0;
-}
-
-.product-details .prod-order .counter span {
-  display: block;
-  font-size: 25px;
-  padding: 0 10px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.product-details .overview .tab-links {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-}
-
-.product-details .overview .tab-links li {
-  display: inline-block;
-  margin-right: 30px;
-  padding-bottom: 10px;
-  position: relative;
-}
-
-.product-details .overview .tab-links li:last-of-type {
-  margin-right: 0;
-}
-
-.product-details .overview .tab-links li:after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  width: 50px;
-  height: 2px;
-  background: #fff;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  opacity: 0;
-}
-
-.product-details .overview .tab-links li.current:after {
-  opacity: 1;
-}
-
-.product-details .overview .tab-content .item.info li .line {
-  width: 100%;
-  border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
-  margin-right: 30px;
-  margin-left: 30px;
-}
-
-.product-details .overview .tab-content .item.info li .ml-auto {
-  white-space: nowrap;
-}
-
-.product-details .overview .tab-content .add-review {
-  padding: 60px 40px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.product-details .overview .tab-content .add-review .star-rating {
-  direction: rtl;
-  display: inline-block;
-}
-
-.product-details .overview .tab-content .add-review .star-rating input[type="radio"] {
-  display: none;
-}
-
-.product-details .overview .tab-content .add-review .star-rating label {
-  color: #bbb;
-  padding: 0;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.product-details .overview .tab-content .add-review .star-rating label:hover,
-.product-details .overview .tab-content .add-review .star-rating label:hover~label,
-.product-details .overview .tab-content .add-review .star-rating input[type="radio"]:checked~label {
-  color: #ffaa17;
-}
-
-.product-details .overview .tab-content .add-review .form input,
-.product-details .overview .tab-content .add-review .form textarea {
-  color: #fff;
-  width: 100%;
-  padding: 0 0 10px;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-}
-
-.product-details .overview .tab-content .add-review .form input:focus,
-.product-details .overview .tab-content .add-review .form textarea:focus {
-  border-color: #eee;
-}
-
-.product-details .overview .tab-content .add-review .form textarea {
-  min-height: 180px;
-}
-
-.product-details .overview .tab-content .add-review .form .checkbox input {
-  width: auto;
-}
-
-.product-details .overview .tab-content .add-review .form .checkbox label {
-  font-size: 14px;
-  font-weight: 300;
-  opacity: .7;
-}
-
-.shop-cart table {
-  width: 100%;
-}
-
-.shop-cart th {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-  padding-bottom: 15px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.shop-cart td {
-  padding: 15px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.shop-cart td.remove {
-  text-align: right;
-  font-size: 30px;
-  opacity: .8;
-}
-
-.shop-cart .counter {
-  padding: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.shop-cart .counter input {
-  width: 50px;
-  border: 0;
-  font-size: 15px;
-  line-height: 30px;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.04);
-  color: #fff;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  outline: 0;
-}
-
-.shop-cart .counter span {
-  display: block;
-  font-size: 25px;
-  padding: 0 10px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-@media only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px) {
-  .shop-cart {
-    /* Force table to not be like tables anymore */
-    /* Hide table headers (but not display: none;, for accessibility) */
-  }
-
-  .shop-cart table {
-    width: 100%;
-  }
-
-  .shop-cart table,
-  .shop-cart thead,
-  .shop-cart tbody,
-  .shop-cart th,
-  .shop-cart td,
-  .shop-cart tr {
-    display: block;
-  }
-
-  .shop-cart thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-
-  .shop-cart tr {
-    margin-bottom: 30px;
-    border: 1px solid #ccc;
-  }
-
-  .shop-cart td {
-    /* Behave  like a "row" */
-    border: none;
-    border-bottom: 1px solid #eee;
-    position: relative;
-    padding-left: 50%;
-  }
-
-  .shop-cart td:before {
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    /* Label the data */
-    content: attr(data-column);
-  }
-
-  .shop-cart td.remove {
-    text-align: left;
-  }
-
-  .shop-cart .d-flex {
-    display: block !important;
-  }
-
-  .shop-cart .ml-30 {
-    margin-left: 0 !important;
-    margin-top: 10px;
-  }
-}
-
-.shop-cart .coupon input {
-  padding: 14px;
-  background: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  color: #fff;
-}
-
-.shop-cart .coupon input:focus {
-  border-color: #eee;
-}
-
-.shop-checkout .order-form .row {
-  margin-left: -10px;
-  margin-right: -10px;
-}
-
-.shop-checkout .order-form .row>div {
-  padding: 0 10px;
-}
-
-.shop-checkout .order-form .form-group {
-  margin-bottom: 20px;
-}
-
-.shop-checkout .order-form .form-group label {
-  margin-bottom: 10px;
-  color: rgba(255, 255, 255, 0.7);
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 13px;
-}
-
-.shop-checkout .order-form .form-group input {
-  width: 100%;
-  padding: 15px;
-  background: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  color: #fff;
-}
-
-.shop-checkout .checkout-order-info .butn {
-  width: 100%;
-  text-align: center;
-  border-radius: 40px;
 }
 
 /* ====================== [ Start Responsive ] ====================== */
